--- a/uppgift11.html
+++ b/uppgift11.html
@@ -1,26 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="sv">
     <head>
 <title>Uppgift1</title>
 <meta charset="utf-8">
 <link href="style.css" rel="stylesheet">
- </head>
+</head>
  <body>
-    <h1>Alya</h1> 
+  <header>
+    <h1>Alya</h1>
+  </header>
 
- 
-<p class="abaut-me">Jag heter Alya haj Saeed, jag är 16 år gammal men imorgon är det min földesdag så jag kommer att bli 17 år gammal.
+  <nav>
+<u1>
+  <li><a herf="#about-me">om mig</a></li>
+<li><a herf="#program">Teknik programet</a></li>
+</ul>
+</nav>
+
+<main>
+  <section= id="about-me">
+    <h2>om mig</h2>
+
+  
+    <p class="about-me">Jag heter Alya haj Saeed, jag är 16 år gammal men imorgon är det min földesdag så jag kommer att bli 17 år gammal.
   Jag är jätte intreserad av teknik och desing. Det mesta som jag är intresserad av inom desing är att designa möbler. </p>
+  </section>
+  <section id="porgrame">
   <h1>Teknik programet</h1>
 <p class="program-stycke">Jag går andra året i gymnasiet på teknik programmet, jag valde just teknik porgramet eftersom man kunde välja ett intrtning inom desing och det tycker jag om. </p>
  <p class="tankar">När vi fick välja vilken inritning vi vill gå på så vill jag gå It med jag valde inte det eftersom jag va bara inteserad av Webbutveckling, därför valde jag det som indviduellt val. Jag hoppas på at det ska gå bra och att jag ska få lära mig nya saker.  </p>
-    <p>Ett stycke med en länk
+</section>
+</main>
+
+ <p>Ett stycke med en länk
         <a href=" https://teknikum.se">Teknikum</a>
-     <p> 
+     <p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Teknikum_V%C3%A4xj%C3%B6.jpg/1200px-Teknikum_V%C3%A4xj%C3%B6.jpg" alt="Teknikum"></a>
 
 
-
- </body>
+</body>
  
  </html>
